Files save to Database via multer, Collapse Navbar, AboutUs

--- a/nos-tech/public/index.html
+++ b/nos-tech/public/index.html
@@ -10,9 +10,7 @@
       content="Learning management system app build using React.js"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
     <!--React-Bootstrap CDN-->
     <link
     rel="stylesheet"
@@ -20,6 +18,10 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
     crossorigin="anonymous"
   />
+    <!-- Collapse header-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- End of collapse header-->
     <title>nosTech</title>
   </head>
   <body>
